fixed: toggle bar
in toggle bar , fixed h5 (had different position) and also  the gap was messed up. images had their specific width, and last 2 element should not be with images so i replaced with span and fixxed the gaps .

--- a/css/main.css
+++ b/css/main.css
@@ -1248,7 +1248,6 @@ footer {
 .friends-info h5 {
   font-size: 14px;
   font-weight: 400;
-  padding: 0 20px;
 }
 
 .friends-playlist {
